lab3/.antlr/smallCParser.java
// Generated from /homes/c/cheny811/ece467/lab3/smallC.g4 by ANTLR 4.13.1

#include "ASTNodes.h"
#include <iostream>
#include <string>

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class smallCParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, BOOL=33, ID=34, INT=35, WS=36, COMMENT=37;
	public static final int
		RULE_program = 0, RULE_preamble = 1, RULE_decls = 2, RULE_scalarDeclList = 3, 
		RULE_scalarDecl = 4, RULE_arrDeclList = 5, RULE_arrDecl = 6, RULE_fcnProto = 7, 
		RULE_fcnDecl = 8, RULE_varType = 9, RULE_retType = 10, RULE_constant = 11, 
		RULE_boolConst = 12, RULE_scope = 13, RULE_stmt = 14, RULE_assignStmt = 15, 
		RULE_ifStmt = 16, RULE_whileStmt = 17, RULE_retStmt = 18, RULE_expr = 19, 
		RULE_intExpr = 20, RULE_var = 21, RULE_params = 22, RULE_paramEntry = 23, 
		RULE_paramList = 24, RULE_args = 25, RULE_argEntry = 26, RULE_argList = 27, 
		RULE_varName = 28, RULE_arrName = 29, RULE_fcnName = 30, RULE_intConst = 31;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "preamble", "decls", "scalarDeclList", "scalarDecl", "arrDeclList", 
			"arrDecl", "fcnProto", "fcnDecl", "varType", "retType", "constant", "boolConst", 
			"scope", "stmt", "assignStmt", "ifStmt", "whileStmt", "retStmt", "expr", 
			"intExpr", "var", "params", "paramEntry", "paramList", "args", "argEntry", 
			"argList", "varName", "arrName", "fcnName", "intConst"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'#include'", "'\"scio.h\"'", "';'", "'['", "']'", "'('", "')'", 
			"'bool'", "'int'", "'void'", "'{'", "'}'", "'='", "'if'", "'else'", "'while'", 
			"'return'", "'!'", "'-'", "'<'", "'<='", "'>'", "'>='", "'=='", "'!='", 
			"'||'", "'&&'", "'*'", "'/'", "'+'", "'[]'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, "BOOL", "ID", "INT", 
			"WS", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "smallC.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public smallCParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public smallc::ProgramNode * prg;
		public DeclsContext decls;
		public TerminalNode EOF() { return getToken(smallCParser.EOF, 0); }
		public PreambleContext preamble() {
			return getRuleContext(PreambleContext.class,0);
		}
		public List<DeclsContext> decls() {
			return getRuleContexts(DeclsContext.class);
		}
		public DeclsContext decls(int i) {
			return getRuleContext(DeclsContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);

		    ((ProgramContext)_localctx).prg =  new smallc::ProgramNode();
		    _localctx.prg->setRoot(_localctx.prg);

		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				{
				setState(64);
				preamble();
				_localctx.prg->setIo(true);
				}
				break;
			case EOF:
			case T__7:
			case T__8:
			case T__9:
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1792L) != 0)) {
				{
				{
				setState(70);
				((ProgramContext)_localctx).decls = decls();

				    for(smallc::DeclNode * decl : ((ProgramContext)_localctx).decls.declarations)
				        _localctx.prg->addDeclaration(decl);

				}
				}
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(78);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PreambleContext extends ParserRuleContext {
		public PreambleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_preamble; }
	}

	public final PreambleContext preamble() throws RecognitionException {
		PreambleContext _localctx = new PreambleContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_preamble);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(T__0);
			setState(81);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclsContext extends ParserRuleContext {
		public std::vector<smallc::DeclNode *> declarations;
		public ScalarDeclListContext scalarDeclList;
		public ArrDeclListContext arrDeclList;
		public FcnProtoContext fcnProto;
		public FcnDeclContext fcnDecl;
		public ScalarDeclListContext scalarDeclList() {
			return getRuleContext(ScalarDeclListContext.class,0);
		}
		public ArrDeclListContext arrDeclList() {
			return getRuleContext(ArrDeclListContext.class,0);
		}
		public FcnProtoContext fcnProto() {
			return getRuleContext(FcnProtoContext.class,0);
		}
		public FcnDeclContext fcnDecl() {
			return getRuleContext(FcnDeclContext.class,0);
		}
		public DeclsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decls; }
	}

	public final DeclsContext decls() throws RecognitionException {
		DeclsContext _localctx = new DeclsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_decls);
		try {
			setState(95);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(83);
				((DeclsContext)_localctx).scalarDeclList = scalarDeclList();

				        for(smallc::DeclNode * scalardecl : ((DeclsContext)_localctx).scalarDeclList.scalardecls)
				            _localctx.declarations.push_back(scalardecl);
				    
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(86);
				((DeclsContext)_localctx).arrDeclList = arrDeclList();

				        for(smallc::DeclNode * arrdecl : ((DeclsContext)_localctx).arrDeclList.arrdecls)
				            _localctx.declarations.push_back(arrdecl);
				    
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(89);
				((DeclsContext)_localctx).fcnProto = fcnProto();

				        _localctx.declarations.push_back(((DeclsContext)_localctx).fcnProto.fcndeclaration);
				    
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(92);
				((DeclsContext)_localctx).fcnDecl = fcnDecl();

				        _localctx.declarations.push_back(((DeclsContext)_localctx).fcnDecl.fcndeclaration);
				    
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ScalarDeclListContext extends ParserRuleContext {
		public std::vector<smallc::ScalarDeclNode*> scalardecls;
		public ScalarDeclContext scalarDecl;
		public ScalarDeclListContext scalarDeclList;
		public ScalarDeclContext scalarDecl() {
			return getRuleContext(ScalarDeclContext.class,0);
		}
		public ScalarDeclListContext scalarDeclList() {
			return getRuleContext(ScalarDeclListContext.class,0);
		}
		public ScalarDeclListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scalarDeclList; }
	}

	public final ScalarDeclListContext scalarDeclList() throws RecognitionException {
		ScalarDeclListContext _localctx = new ScalarDeclListContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_scalarDeclList);
		try {
			setState(104);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(97);
				((ScalarDeclListContext)_localctx).scalarDecl = scalarDecl();

				        _localctx.scalardecls.push_back(((ScalarDeclListContext)_localctx).scalarDecl.scalardecl);
				    
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(100);
				((ScalarDeclListContext)_localctx).scalarDecl = scalarDecl();
				setState(101);
				((ScalarDeclListContext)_localctx).scalarDeclList = scalarDeclList();

				        _localctx.scalardecls.push_back(((ScalarDeclListContext)_localctx).scalarDecl.scalardecl);
				        for(smallc::ScalarDeclNode* decl : ((ScalarDeclListContext)_localctx).scalarDeclList.scalardecls)
				            _localctx.scalardecls.push_back(decl);
				    
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ScalarDeclContext extends ParserRuleContext {
		public smallc::ScalarDeclNode* scalardecl;
		public VarTypeContext varType;
		public VarNameContext varName;
		public VarTypeContext varType() {
			return getRuleContext(VarTypeContext.class,0);
		}
		public VarNameContext varName() {
			return getRuleContext(VarNameContext.class,0);
		}
		public ScalarDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scalarDecl; }
	}

	public final ScalarDeclContext scalarDecl() throws RecognitionException {
		ScalarDeclContext _localctx = new ScalarDeclContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_scalarDecl);

		    ((ScalarDeclContext)_localctx).scalardecl =  new smallc::ScalarDeclNode();

		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			((ScalarDeclContext)_localctx).varType = varType();
			setState(107);
			((ScalarDeclContext)_localctx).varName = varName();
			setState(108);
			match(T__2);

			        _localctx.scalardecl->setType(((ScalarDeclContext)_localctx).varType.type);
			        _localctx.scalardecl->setName(((ScalarDeclContext)_localctx).varName.name);
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArrDeclListContext extends ParserRuleContext {
		public std::vector<smallc::ArrayDeclNode *> arrdecls;
		public ArrDeclContext arrDecl;
		public ArrDeclListContext arrDeclList;
		public ArrDeclContext arrDecl() {
			return getRuleContext(ArrDeclContext.class,0);
		}
		public ArrDeclListContext arrDeclList() {
			return getRuleContext(ArrDeclListContext.class,0);
		}
		public ArrDeclListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrDeclList; }
	}

	public final ArrDeclListContext arrDeclList() throws RecognitionException {
		ArrDeclListContext _localctx = new ArrDeclListContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_arrDeclList);
		try {
			setState(118);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(111);
				((ArrDeclListContext)_localctx).arrDecl = arrDecl();
				 
				        _localctx.arrdecls.push_back(((ArrDeclListContext)_localctx).arrDecl.arrdecl);
				    
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(114);
				((ArrDeclListContext)_localctx).arrDecl = arrDecl();
				setState(115);
				((ArrDeclListContext)_localctx).arrDeclList = arrDeclList();

				        _localctx.arrdecls.push_back(((ArrDeclListContext)_localctx).arrDecl.arrdecl);
				        for(smallc::ArrayDeclNode* decl : ((ArrDeclListContext)_localctx).arrDeclList.arrdecls)
				            _localctx.arrdecls.push_back(decl);
				    
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArrDeclContext extends ParserRuleContext {
		public smallc::ArrayDeclNode* arrdecl;
		public smallc::ArrayTypeNode * type;
		public VarTypeContext varType;
		public ArrNameContext arrName;
		public IntConstContext intConst;
		public VarTypeContext varType() {
			return getRuleContext(VarTypeContext.class,0);
		}
		public ArrNameContext arrName() {
			return getRuleContext(ArrNameContext.class,0);
		}
		public IntConstContext intConst() {
			return getRuleContext(IntConstContext.class,0);
		}
		public ArrDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrDecl; }
	}

	public final ArrDeclContext arrDecl() throws RecognitionException {
		ArrDeclContext _localctx = new ArrDeclContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_arrDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			((ArrDeclContext)_localctx).varType = varType();
			setState(121);
			((ArrDeclContext)_localctx).arrName = arrName();
			setState(122);
			match(T__3);
			setState(123);
			((ArrDeclContext)_localctx).intConst = intConst();
			setState(124);
			match(T__4);
			setState(125);
			match(T__2);

			        ((ArrDeclContext)_localctx).type =  new smallc::ArrayTypeNode(((ArrDeclContext)_localctx).varType.type, ((ArrDeclContext)_localctx).intConst.intconst->getVal());
			        ((ArrDeclContext)_localctx).arrdecl =  new smallc::ArrayDeclNode(_localctx.type, ((ArrDeclContext)_localctx).arrName.name);
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FcnProtoContext extends ParserRuleContext {
		public smallc::FunctionDeclNode * fcndeclaration;
		public RetTypeContext retType;
		public FcnNameContext fcnName;
		public ParamsContext params;
		public RetTypeContext retType() {
			return getRuleContext(RetTypeContext.class,0);
		}
		public FcnNameContext fcnName() {
			return getRuleContext(FcnNameContext.class,0);
		}
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public FcnProtoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fcnProto; }
	}

	public final FcnProtoContext fcnProto() throws RecognitionException {
		FcnProtoContext _localctx = new FcnProtoContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_fcnProto);

		    ((FcnProtoContext)_localctx).fcndeclaration =  new smallc::FunctionDeclNode();
		    _localctx.fcndeclaration->setProto(true);

		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			((FcnProtoContext)_localctx).retType = retType();
			setState(129);
			((FcnProtoContext)_localctx).fcnName = fcnName();
			setState(130);
			match(T__5);
			setState(131);
			((FcnProtoContext)_localctx).params = params();
			setState(132);
			match(T__6);
			setState(133);
			match(T__2);

			        _localctx.fcndeclaration->setRetType(((FcnProtoContext)_localctx).retType.rettype);
			        _localctx.fcndeclaration->setName(((FcnProtoContext)_localctx).fcnName.name);
			        _localctx.fcndeclaration->setParameter(((FcnProtoContext)_localctx).params.paramlist);
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FcnDeclContext extends ParserRuleContext {
		public smallc::FunctionDeclNode * fcndeclaration;
		public RetTypeContext retType;
		public FcnNameContext fcnName;
		public ParamsContext params;
		public ScopeContext scope;
		public RetTypeContext retType() {
			return getRuleContext(RetTypeContext.class,0);
		}
		public FcnNameContext fcnName() {
			return getRuleContext(FcnNameContext.class,0);
		}
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public ScopeContext scope() {
			return getRuleContext(ScopeContext.class,0);
		}
		public FcnDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fcnDecl; }
	}

	public final FcnDeclContext fcnDecl() throws RecognitionException {
		FcnDeclContext _localctx = new FcnDeclContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_fcnDecl);

		    ((FcnDeclContext)_localctx).fcndeclaration =  new smallc::FunctionDeclNode();
		    _localctx.fcndeclaration->setProto(false);
		    _localctx.fcndeclaration->setLocation(_localctx->start->getLine(), _localctx->start->getCharPositionInLine());

		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			((FcnDeclContext)_localctx).retType = retType();
			setState(137);
			((FcnDeclContext)_localctx).fcnName = fcnName();
			setState(138);
			match(T__5);
			setState(139);
			((FcnDeclContext)_localctx).params = params();
			setState(140);
			match(T__6);
			setState(141);
			((FcnDeclContext)_localctx).scope = scope();

			        _localctx.fcndeclaration->setRetType(((FcnDeclContext)_localctx).retType.rettype);
			        _localctx.fcndeclaration->setName(((FcnDeclContext)_localctx).fcnName.name);
			        _localctx.fcndeclaration->setParameter(((FcnDeclContext)_localctx).params.paramlist);
			        _localctx.fcndeclaration->setBody(((FcnDeclContext)_localctx).scope.scope_);
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarTypeContext extends ParserRuleContext {
		public smallc::PrimitiveTypeNode* type;
		public VarTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varType; }
	}

	public final VarTypeContext varType() throws RecognitionException {
		VarTypeContext _localctx = new VarTypeContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_varType);
		 
		    ((VarTypeContext)_localctx).type =  new smallc::PrimitiveTypeNode();
		    _localctx.type->setLocation(_localctx->start->getLine(), _localctx->start->getCharPositionInLine());

		try {
			setState(148);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__7:
				enterOuterAlt(_localctx, 1);
				{
				setState(144);
				match(T__7);

				        _localctx.type->setType(smallc::TypeNode::TypeEnum::Bool);
				    
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 2);
				{
				setState(146);
				match(T__8);

				        _localctx.type->setType(smallc::TypeNode::TypeEnum::Int);
				    
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RetTypeContext extends ParserRuleContext {
		public smallc::PrimitiveTypeNode* rettype;
		public VarTypeContext varType;
		public VarTypeContext varType() {
			return getRuleContext(VarTypeContext.class,0);
		}
		public RetTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_retType; }
	}

	public final RetTypeContext retType() throws RecognitionException {
		RetTypeContext _localctx = new RetTypeContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_retType);
		try {
			setState(155);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__9:
				enterOuterAlt(_localctx, 1);
				{
				setState(150);
				match(T__9);

				        ((RetTypeContext)_localctx).rettype =  new smallc::PrimitiveTypeNode();
				        _localctx.rettype->setLocation(_localctx->start->getLine(), _localctx->start->getCharPositionInLine());
				    
				}
				break;
			case T__7:
			case T__8:
				enterOuterAlt(_localctx, 2);
				{
				setState(152);
				((RetTypeContext)_localctx).varType = varType();

				        ((RetTypeContext)_localctx).rettype =  ((RetTypeContext)_localctx).varType.type;
				    
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConstantContext extends ParserRuleContext {
		public smallc::ExprNode* expression;
		public BoolConstContext boolConst;
		public IntConstContext intConst;
		public BoolConstContext boolConst() {
			return getRuleContext(BoolConstContext.class,0);
		}
		public IntConstContext intConst() {
			return getRuleContext(IntConstContext.class,0);
		}
		public ConstantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constant; }
	}

	public final ConstantContext constant() throws RecognitionException {
		ConstantContext _localctx = new ConstantContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_constant);
		try {
			setState(163);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BOOL:
				enterOuterAlt(_localctx, 1);
				{
				setState(157);
				((ConstantContext)_localctx).boolConst = boolConst();

				        ((ConstantContext)_localctx).expression =  new smallc::BoolExprNode(((ConstantContext)_localctx).boolConst.boolconst);
				        _localctx.expression->setLocation(_localctx->start->getLine(), _localctx->start->getCharPositionInLine());
				    
				}
				break;
			case T__18:
			case INT:
				enterOuterAlt(_localctx, 2);
				{
				setState(160);
				((ConstantContext)_localctx).intConst = intConst();

				        ((ConstantContext)_localctx).expression =  new smallc::IntExprNode(((ConstantContext)_localctx).intConst.intconst);
				        _localctx.expression->setLocation(_localctx->start->getLine(), _localctx->start->getCharPositionInLine());
				    
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BoolConstContext extends ParserRuleContext {
		public smallc::BoolConstantNode* boolconst;
		public Token BOOL;
		public TerminalNode BOOL() { return getToken(smallCParser.BOOL, 0); }
		public BoolConstContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_boolConst; }
	}

	public final BoolConstContext boolConst() throws RecognitionException {
		BoolConstContext _localctx = new BoolConstContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_boolConst);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(165);
			((BoolConstContext)_localctx).BOOL = match(BOOL);

			        ((BoolConstContext)_localctx).boolconst =  new smallc::BoolConstantNode((((BoolConstContext)_localctx).BOOL!=null?((BoolConstContext)_localctx).BOOL.getText():null));
			        _localctx.boolconst->setLocation(_localctx->start->getLine(), _localctx->start->getCharPositionInLine());
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ScopeContext extends ParserRuleContext {
		public smallc::ScopeNode* scope_;
		public ScalarDeclContext scalarDecl;
		public ArrDeclContext arrDecl;
		public StmtContext stmt;
		public List<ScalarDeclContext> scalarDecl() {
			return getRuleContexts(ScalarDeclContext.class);
		}
		public ScalarDeclContext scalarDecl(int i) {
			return getRuleContext(ScalarDeclContext.class,i);
		}
		public List<ArrDeclContext> arrDecl() {
			return getRuleContexts(ArrDeclContext.class);
		}
		public ArrDeclContext arrDecl(int i) {
			return getRuleContext(ArrDeclContext.class,i);
		}
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public ScopeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scope; }
	}

	public final ScopeContext scope() throws RecognitionException {
		ScopeContext _localctx = new ScopeContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_scope);

		    ((ScopeContext)_localctx).scope_ =  new smallc::ScopeNode();
		    _localctx.scope_->setLocation(_localctx->start->getLine(), _localctx->start->getCharPositionInLine());

		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(168);
			match(T__10);
			setState(177);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__7 || _la==T__8) {
				{
				setState(175);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
				case 1:
					{
					setState(169);
					((ScopeContext)_localctx).scalarDecl = scalarDecl();

					        _localctx.scope_->addDeclaration(((ScopeContext)_localctx).scalarDecl.scalardecl);

					    
					}
					break;
				case 2:
					{
					setState(172);
					((ScopeContext)_localctx).arrDecl = arrDecl();

					        _localctx.scope_->addDeclaration(((ScopeContext)_localctx).arrDecl.arrdecl);
					    
					}
					break;
				}
				}
				setState(179);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(185);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 60130543680L) != 0)) {
				{
				{
				setState(180);
				((ScopeContext)_localctx).stmt = stmt();

				        _localctx.scope_->addChild(((ScopeContext)_localctx).stmt.statement);
				    
				}
				}
				setState(187);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(188);
			match(T__11);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
